feat: improve release changelog

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,3 +30,13 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+      - 'prepare release'
+  groups:
+    - title: Features
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: 'Bug fixes'
+      regexp: '^.*?bug(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: Others
+      order: 999
