--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Install Dependencies
+        run: go get .
+        
       - name: Build
         run: go build -v ./...
 
